--- a/Resource/onionMoblie/default.custom.yaml
+++ b/Resource/onionMoblie/default.custom.yaml
@@ -2,8 +2,9 @@ customization:
   distribution_code_name: ""
   distribution_version: ""
   generator: "Rime::SwitcherSettings"
-  modified_time: "Wed Aug 11 20:45:44 2021"
+  modified_time: "Wed Aug 11 23:37:19 2021"
   rime_version: 1.5.3
 patch:
   schema_list:
+    - {schema: bpmfmobileplus}
     - {schema: yitian_26Keys}
