--- a/Resource/onionMoblie/customer.trime.yaml
+++ b/Resource/onionMoblie/customer.trime.yaml
@@ -82,7 +82,7 @@ style:
   key_long_text_size: 12 #18 #長標籤字號
   key_text_size: 14 #20 #22 #24 #鍵字號
   key_width: 10.0 #鍵寬，佔屏幕寬的百分比
-  keyboards: [.default, default, number, symbols, symbols2, symbols3, symbols4, symbols5, symbols6, bqrw1, bqrw2, bqrw3, bqrw4, bqrw5, bqrw6, bqqt1, bqqt2, bqqt3, bqqt4, bqqz1, bqqz2, bqqz3, bqqz4, bqqz5, bqpt1, bqpt2, bqhd1, bqhd2, bqhc1, bqhc2, bqlx1, bqlx2, bqlx3, bqlx4, bqlx5, bqkj1, bqkj2, bqkj3, bqkj4, bqfh1, bqfh2, bqfh3, bqfh4, bqfh5, bqfh6, bqfh7, bqfh8, bqfh9, bqfh10, bqfh11, bqfh12, bqfh13, bqfh14, kao_fond, kao_sad, kao_mad, kao_astonished, kao_impotent, kao_happy, kmenu, duse, bpmfmobileplus, yitian26Keys] #鍵盤配置#, edit, move
+  keyboards: [.default, default, Menu_emoji, number, symbols, symbols2, symbols3, symbols4, symbols5, symbols6, bqrw1, bqrw2, bqrw3, bqrw4, bqrw5, bqrw6, bqqt1, bqqt2, bqqt3, bqqt4, bqqz1, bqqz2, bqqz3, bqqz4, bqqz5, bqpt1, bqpt2, bqhd1, bqhd2, bqhc1, bqhc2, bqlx1, bqlx2, bqlx3, bqlx4, bqlx5, bqkj1, bqkj2, bqkj3, bqkj4, bqfh1, bqfh2, bqfh3, bqfh4, bqfh5, bqfh6, bqfh7, bqfh8, bqfh9, bqfh10, bqfh11, bqfh12, bqfh13, bqfh14, kao_fond, kao_sad, kao_mad, kao_astonished, kao_impotent, kao_happy, kmenu, duse, bpmfmobileplus, yitian26Keys] #鍵盤配置#, edit, move
   label_text_size: 0 #22 #標籤字號
   label_font: label.ttf #編標籤字體
   latin_font: latin.ttf #西文本體
@@ -1023,7 +1023,7 @@ preset_keyboards:
       - {label: 'ㄥ ㄌ', hint: 'l', click: l}
       - {width: 5, key_back_color: bh2, key_text_color: th2}
 
-      - {label: '☺', hilited_key_back_color: benter, width: 15, click: Keyboard_bqrw1, key_back_color: bbs, key_text_color: tgs, key_symbol_color: tajs}
+      - {click: Shift_L, composing: Escape, width: 15, hilited_key_back_color: benter, key_back_color: bbs, key_text_color: tbs} #, composing: delimiter
       - {label: 'ㄠ', hint: 'z', click: z}
       - {label: 'ㄨ', hint: 'x', click: x}
       - {label: 'ㄕ ㄒ', hint: 'c', click: c}
@@ -1038,7 +1038,8 @@ preset_keyboards:
       - {click: ',', label: '，', long_click: '<>{Left}', key_back_color: bh4, key_text_color: th4}
       - {click: space, long_click: Keyboard_kmenu, swipe_left: "Left", swipe_right: "Right", swipe_up: Mode_switch, width: 30, key_back_color: bkg, key_text_color: tkg} #, swipe_up: Schema_switchcn
       - {click: '.', label: '。', long_click: Keyboard_kao, key_back_color: bh4, key_text_color: th4}
-      - {click: Return, swipe_up: CommitRawInput, width: 25, key_back_color: benter, key_text_color: tenter} #, swipe_up: Escape
+      - {click: Return, long_click: Menu_emoji, width: 25, key_back_color: benter, key_text_color: tenter, key_symbol_color: tajs} #, swipe_up: Escape
+
 #####################
 #####################
   bpmfmobileplus:
@@ -5740,6 +5741,7 @@ preset_keys:
   Page_Down_duse: {label: ↧, preview: '↧', send: Page_Down, repeatable: true, functional: false}
   Delete_duse: {label: ⌦, send: Delete, functional: false}
   Menu_duse: {label: 方案, functional: false, send: Menu} #label: 選單 '✵'
+  Menu_emoji: {label: ☺, functional: false, send: Eisu_toggle, select: bqrw1}
 #直出標點符號
   text_dh_2: {label: '‹、›', preview: '、', text: '、', functional: false} #'{!}、{Left}{BackSpace}{Right}' #'{!}{BackSpace}、{Right}{Keyboard_default}' #"{\"}{'}{Return}"
   text_fh_2: {label: '‹；›', preview: '；', text: '；', functional: false} #'{!}；{Left}{BackSpace}{Right}' #'{!}{BackSpace}；{Right}{Keyboard_default}' #"{\"}{'}{Right}{Return}"
