--- a/Resource/onionMoblie/customer.trime.yaml
+++ b/Resource/onionMoblie/customer.trime.yaml
@@ -1023,7 +1023,7 @@ preset_keyboards:
       - {label: 'ㄥ ㄌ', hint: 'l', click: l}
       - {width: 5, key_back_color: bh2, key_text_color: th2}
 
-      - {click: Shift_L, composing: Escape, width: 15, hilited_key_back_color: benter, key_back_color: bbs, key_text_color: tbs} #, composing: delimiter
+      - {click: Shift_L, long_click: clipboard, composing: Escape, width: 15, hilited_key_back_color: benter, key_back_color: bbs, key_text_color: tbs} #, composing: delimiter
       - {label: 'ㄠ', hint: 'z', click: z}
       - {label: 'ㄨ', hint: 'x', click: x}
       - {label: 'ㄕ ㄒ', hint: 'c', click: c}
@@ -5718,6 +5718,7 @@ preset_keys:
   bpmfmobileplus: {label: ⌨, functional: false, send: Eisu_toggle, select: bpmfmobileplus}
   Keyboard_back: {label: ⏏ 返回, functional: false, send: Eisu_toggle, select: .last_lock}
   K_sign: {click: "", label: "By L'Étranger Onion", functional: false}
+  clipboard: {label: 剪贴板, send: function, command: clipboard}
   Deploy: {label: ⟲ 部署, functional: false, send: function, command: broadcast, option: "com.osfans.trime.deploy"} #部署
 #以下方向功能頁之功能鍵
   Keyboard_duse: {label: '<I>', functional: false, send: Eisu_toggle, select: duse}
