--- a/yitian_26Keys.extended.dict.yaml
+++ b/yitian_26Keys.extended.dict.yaml
@@ -5,9 +5,84 @@ name: yitian_26Keys.extended
 version: "202108"
 sort: by_weight
 vocabulary: essay-zh-hant-onion
-#use_preset_vocabulary: true
 import_tables:
   - yitian_26Keys
 ...
 ##### 以下可自行添加詞句 #####
-因為		en xqk
+啊	a	4
+吧	ba	4
+編輯	bem gef	0
+變更	bemk vl	2
+別人	bewf jnf	0
+別人說	bewf jnf cxo	2
+不諱	bxf hxqk	5
+不能	bxf nlf	0
+不能編輯	bxf nlf bem gef	2
+不	bxk	2
+失敗	c bik	2
+啥	caf	2
+現在	cemk qik	6
+相關	cet vxm	2
+像	cetk	2
+寫好	cewj hzj	2
+時間	cf gem	2
+時候	cf hpk	6
+是	ck	16
+是不是	ck bxf ck	2
+是的	ck dr	2
+審核	cnj hrf	4
+審核狀態	cnj hrf gxtk tik	2
+審核列表	cnj hrf lewk bezj	2
+商家	ct gea	4
+上	ctk	0
+上版	ctk bmj	8
+上傳	ctk yxmf	0
+需要	cu ezk	2
+大意	dak ek	2
+當然	dt jmf	2
+對	dxqk	12
+對啊	dxqk a	45
+已擋	ej dtj	2
+應該	el vi	2
+因為	en xqk	8
+優惠	ep hxqk	0
+優惠卷	ep hxqk gumk	2
+有的時候	epj dr cf hpk	2
+有這感覺	epj grk vmj guwf	2
+知道	g dzk	2
+檢舉	gemj guj	2
+建置	gemk gk	2
+結果	gewf vxoj	2
+帳號	gtk hzk	2
+卷	gumk	40
+覺得	guwf drf	6
+狀態	gxtk tik	4
+回覆	hxqf fxk	4
+會變	hxqk bemk	2
+可以	krj ej	2
+可能	krj nlf	2
+留言	lepf emf	2
+兩個	letj vrd	2
+列表	lewk bezj	0
+欄位	lmf xqk	8
+沒變	mqf bemk	2
+沒東西	mqf dxl ce	2
+沒有	mqf epj	6
+每天	mqj tem	2
+矛盾	mzf dxnk	2
+資料	q lezk	6
+再聽	qik tel	0
+怎麼	qnj mrd	2
+圖檔	txf dtj	2
+原本	umf bnj	2
+原則	umf qrf	0
+請問	velj xnk	2
+改變	vij bemk	4
+感覺	vmj guwf	0
+參數	wm cxk	2
+腦袋	nzj dik	2
+傳	yxmf	4
+戳	yxo	2
+吹毛求疵	yxq mzf vepf w	2
+塵蟎	ynf mmf 3
+殯葬	ben qtk 2
